Fix: Add TikTok sandbox mode support for developer testing

--- a/.env.local.example
+++ b/.env.local.example
@@ -6,6 +6,8 @@ SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
 # TikTok OAuth
 TIKTOK_CLIENT_KEY=your-tiktok-client-key
 TIKTOK_CLIENT_SECRET=your-tiktok-client-secret
+# Set to 'true' for sandbox/testing, 'false' for production
+TIKTOK_SANDBOX=true
 # For local dev you can use http://localhost:3000; for Vercel use your HTTPS domain
 NEXT_PUBLIC_TIKTOK_REDIRECT_URI=https://your-project.vercel.app/api/auth/tiktok/callback
 
