--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "devDependencies": {
     "eslint": "^9.39.1",
-    "eslint-config-next": "^16.0.3"
+    "eslint-config-next": "^16.0.3",
+    "tsx": "^4.20.6"
   }
 }
