Fix TikTok OAuth redirect issues and add comprehensive documentation
## Changes

### Core Fix: Automated Redirect Detection (Production-Safe)
- Updated app/api/auth/tiktok/callback/route.ts with getBaseUrl() helper
- Automatically detects request origin (ngrok, Vercel, localhost)
- Uses x-forwarded-host header for proxy/tunnel support
- Determines protocol based on hostname (http for localhost, https otherwise)
- All redirects (dashboard, onboarding, errors) now use correct base URL
- Fixes SSL errors when using ngrok for OAuth testing
- No hardcoded URLs - works across all environments

### Problem Solved
- Issue 1: unauthorized_client error → sandbox test account whitelisting
- Issue 2: SSL redirect error → localhost HTTPS mismatch with ngrok
- Issue 3: Wrong domain redirects → referer header unreliable during OAuth callback

### Documentation Added
- TIKTOK_OAUTH_SETUP.md - Complete setup guide
- TIKTOK_OAUTH_FLOW.md - Visual OAuth flow diagrams
- SANDBOX_TROUBLESHOOTING.md - Sandbox vs production comparison
- OAUTH_SUCCESS_GUIDE.md - User-facing success guide
- REDIRECT_FIX_IMPLEMENTATION.md - Technical implementation details
- REDIRECT_FIX_SUMMARY.txt - Visual summary
- TIKTOK_FIX_QUICK_REF.txt - Quick reference card

### Scripts Added
- scripts/validate-tiktok.sh - Bash validation script
- scripts/validate-tiktok-config.ts - TypeScript validation
- scripts/diagnose-sandbox.sh - Sandbox diagnostic tool

### Development Tools
- Updated package.json with npm scripts (validate:tiktok, seed:creator)
- Added localhost-redirect helper page for better UX

## Testing
- ✅ Verified with ngrok tunnel
- ✅ No TypeScript/lint errors
- ✅ Successful OAuth flow with test account
- ✅ Production-safe: no environment-specific code

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint --ext .ts,.tsx,.js,.jsx ."
+    "lint": "eslint --ext .ts,.tsx,.js,.jsx .",
+    "validate:tiktok": "tsx scripts/validate-tiktok-config.ts",
+    "seed:creator": "tsx scripts/seed-sample-creator.ts"
   },
   "keywords": [
     "tiktok",
