Fix CreatorCard metrics positioning and header z-index

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ yarn-error.log*
 next-env.d.ts
 public/sw.js
 public/workbox-*.js
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
