--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "eslint": "^9.39.1",
     "eslint-config-next": "^16.0.3",
     "tsx": "^4.20.6"
